# Papers-please-actele-la-control-

./: CMakeLists.txt  Document.cpp  Entry_Permit.cpp  Entry_Permit.h  Game.cpp  Identity_Card.cpp  Identity_Card.h  Immigrant.cpp  Nume - proiect.txt  Orase.txt  Passport.cpp  Passport.h  README.md  Statistics.cpp  Zona.txt  main.cpp  tastatura.txt
headers/: Document.h  DocumentFactory.h  Entry_Permit.h  Game.h  Immigrant.h  Passport.h  Statistics.h
src/: Document.cpp  DocumentFactory.cpp  Entry_Permit.cpp  Game.cpp  Identity_Card.cpp  Immigrant.cpp  Passport.cpp  Statistics.cpp
